--- a/exercises/01_chatbot.ipynb
+++ b/exercises/01_chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92c97e80",
+   "id": "a9b30d24",
    "metadata": {},
    "source": [
     "# Building a Chatbot\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c6a52e4",
+   "id": "d48a3841",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86235cd0",
+   "id": "3cf10428",
    "metadata": {},
    "source": [
     "Today we'll be working with Databricks LLMs.\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64bc81ea",
+   "id": "7337a9ba",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9fe7f7",
+   "id": "bf64152a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +75,13 @@
     "\n",
     "        # Exercise 1.1: Add user message to the chat history.\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        chat_history.append(HumanMessage(content=user_input))\n",
     "        # </solution>\n",
     "\n",
     "        # Exercise 1.2: Invoke the model to get a response.\n",
     "        # Hint: Use `model.invoke(...)`\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        response = model.invoke(chat_history)\n",
     "        # </solution>\n",
     "        print(f\"AI: {response.content}\")\n",
     "\n",
@@ -94,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3fcf542",
+   "id": "cf853354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31f3eaf8",
+   "id": "1f09e093",
    "metadata": {},
    "source": [
     "## Exercise 2 (Bonus): Streamlit Chatbot\n",
@@ -122,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218d92b9",
+   "id": "33fedec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "217b15b8",
+   "id": "8f94e545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c058bd97",
+   "id": "bda4f9bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba91ecc3",
+   "id": "8214b4ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +166,23 @@
     "\n",
     "# Exercise 2.1: Invoke the model with the message history\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "if \"messages\" not in st.session_state:\n",
+    "    st.session_state.messages = []\n",
+    "\n",
+    "for message in st.session_state.messages:\n",
+    "    with st.chat_message(\"user\" if isinstance(message, HumanMessage) else \"assistant\"):\n",
+    "        st.markdown(message.content)\n",
+    "\n",
+    "if prompt := st.chat_input(\"What is up?\"):\n",
+    "    st.session_state.messages.append(HumanMessage(content=prompt))\n",
+    "    with st.chat_message(\"user\"):\n",
+    "        st.markdown(prompt)\n",
+    "\n",
+    "    with st.chat_message(\"assistant\"):\n",
+    "        model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
+    "        response = model.invoke(st.session_state.messages)\n",
+    "        st.markdown(response.content)\n",
+    "        st.session_state.messages.append(response)\n",
     "# </solution>"
    ]
   }
