--- a/exercises/02_rag.ipynb
+++ b/exercises/02_rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe169c6f",
+   "id": "c8b9cb8b",
    "metadata": {},
    "source": [
     "# Exercise 2: RAG\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e40eac9",
+   "id": "1b9acab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828ee050",
+   "id": "e42f0857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d4f7f7",
+   "id": "5b392719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55648e90",
+   "id": "a695d42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
     "    # Hint: Use `PyMuPDFLoader(file).load()`\n",
     "    for file in glob.glob(f\"{pdf_folder}/*.pdf\"):\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        loader = PyMuPDFLoader(file)\n",
+    "        documents.extend(loader.load())\n",
     "        # </solution>\n",
     "\n",
     "    if not documents:\n",
@@ -79,15 +79,17 @@
     "    # Exercise 2.2: Split documents\n",
     "    # Hint: Use `RecursiveCharacterTextSplitter`\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+    "    splits = text_splitter.split_documents(documents)\n",
     "    # </solution>\n",
     "\n",
     "    # Exercise 2.3: Create vectorstore.\n",
     "    # Hint: Use the `InMemoryVectorStore` constructor.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    vectorstore = InMemoryVectorStore.from_documents(\n",
+    "        documents=splits,\n",
+    "        embedding=embed,\n",
+    "    )\n",
     "    # </solution>\n",
     "    return vectorstore"
    ]
@@ -95,15 +97,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf0e5066",
+   "id": "e38916d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve(vectorstore, query: str):\n",
     "    # Exercise 2.4: Implement a retriever using the vectorstore.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    retriever = vectorstore.as_retriever()\n",
+    "    matching_docs = retriever.invoke(query)\n",
     "    # </solution>\n",
     "    return [doc.page_content for doc in matching_docs]"
    ]
@@ -111,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "288671c1",
+   "id": "e4b8947c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +131,8 @@
     "        \"Answer the question based on the context:\\nContext: {context}\\nQuestion: {question}\"\n",
     "    )\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    chain = prompt | model\n",
+    "    response = chain.invoke({\"context\": \"\\n\".join(context), \"question\": query})\n",
     "    # </solution>\n",
     "    print(f\"Question: {query}\")\n",
     "    print(f\"Answer: {response.content}\")\n",
