--- a/exercises/03_tool_calling.ipynb
+++ b/exercises/03_tool_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63df5411",
+   "id": "2e32d2b8",
    "metadata": {},
    "source": [
     "# Exercise 3: Tool Calling\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e76c8e75",
+   "id": "f3a6b017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6d30d6",
+   "id": "8162b002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a9aea3",
+   "id": "2f3e1a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2f5ad33",
+   "id": "7b43de99",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -62,24 +62,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ed878ca",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "ee4a7333",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Exercise 3.1: Define a tool using the decorator. The tool should return the weather for a location.\n",
     "# You can simply return a string for now (e.g. \"Cloudy, 15C\").\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "@tool\n",
+    "def get_weather(location: str) -> str:\n",
+    "    \"\"\"Get the weather for a location.\"\"\"\n",
+    "    if \"Berlin\" in location:\n",
+    "        return \"Cloudy, 15C\"\n",
+    "    return \"Sunny, 25C\"\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fbe398",
+   "id": "fbecf57a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +91,7 @@
     "\n",
     "    # Exercise 3.2: Bind the tool to the model. Use the .bind_tools method.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    model_with_tools = model.bind_tools(tools)\n",
     "    # </solution>\n",
     "\n",
     "    query = \"What is the weather in Berlin?\"\n",
@@ -98,8 +99,7 @@
     "\n",
     "    # Exercise 3.3: Invoke the model to get the tool call\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    ai_msg = model_with_tools.invoke(messages)\n",
     "    # </solution>\n",
     "    messages.append(ai_msg)\n",
     "    print(f\"AI Call: {ai_msg.tool_calls}\")\n",
@@ -110,8 +110,7 @@
     "\n",
     "        # Invoke the selected tool\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        tool_output = selected_tool.invoke(tool_call[\"args\"])\n",
     "        # </solution>\n",
     "        print(f\"Tool Output: {tool_output}\")\n",
     "\n",
@@ -119,8 +118,7 @@
     "\n",
     "    # Exercise 3.5: Get the final response\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    final_response = model_with_tools.invoke(messages)\n",
     "    # </solution>\n",
     "    print(f\"Final Answer: {final_response.content}\")\n",
     "\n",
