--- a/exercises/04_react.ipynb
+++ b/exercises/04_react.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aae95070",
+   "id": "e8c83c6f",
    "metadata": {},
    "source": [
     "# Exercise 4: ReAct Agent\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0438a182",
+   "id": "03840522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb34a04",
+   "id": "7aea9ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96cff30f",
+   "id": "24360b15",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcbd1ce6",
+   "id": "1dcb2912",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed2b884",
+   "id": "71891fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +88,18 @@
     "# Exercise 4.1: Define the divide tool\n",
     "# Hint: Use the @tool decorator. The function should take two ints and return a float.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "@tool\n",
+    "def divide(a: int, b: int) -> float:\n",
+    "    \"\"\"Divide `a` and `b`.Args: a: First int, b: Second int\"\"\"\n",
+    "    return a / b\n",
+    "\n",
+    "\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "433e6d60",
+   "id": "2882b75e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -115,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3118d810",
+   "id": "ae30de58",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -158,8 +162,11 @@
     "            # Exercise 4.2: Handle the tool call. That is, call the function with the arguments\n",
     "            # requested by the LLM and add the result (as a `ToolMessage`) to the conversation history.\n",
     "            # <solution>\n",
-    "            # TODO: Implement this\n",
-    "            pass\n",
+    "            tool = tools_by_name[tool_call[\"name\"]]\n",
+    "            observation = tool.invoke(tool_call[\"args\"])\n",
+    "            result.append(\n",
+    "                ToolMessage(content=observation, tool_call_id=tool_call[\"id\"])\n",
+    "            )\n",
     "            # </solution>\n",
     "        return {\"messages\": result}\n",
     "\n",
@@ -170,23 +177,26 @@
     "        messages = state[\"messages\"]\n",
     "        last_message = messages[-1]\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        if last_message.tool_calls:\n",
+    "            return \"tool_node\"\n",
+    "        return END\n",
     "        # </solution>\n",
     "\n",
     "    # Exercise 4.4: Initialize graph and add nodes\n",
     "    # Hint: Use StateGraph(MessagesState). Add nodes using .add_node(\"name\", function).\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    agent_builder = StateGraph(MessagesState)\n",
+    "    agent_builder.add_node(\"llm_call\", llm_call)\n",
+    "    agent_builder.add_node(\"tool_node\", tool_node)\n",
     "    # </solution>\n",
     "\n",
     "    # Exercise 4.5: Add edges\n",
     "    # Hint: Use .add_edge(start, end) and .add_conditional_edges(source, condition, path_map).\n",
     "    # Connect START -> llm_call, then conditionally to tool_node or END, and tool_node back to llm_call.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    agent_builder.add_edge(START, \"llm_call\")\n",
+    "    agent_builder.add_conditional_edges(\"llm_call\", should_continue, [\"tool_node\", END])\n",
+    "    agent_builder.add_edge(\"tool_node\", \"llm_call\")\n",
     "    # </solution>\n",
     "\n",
     "    return agent_builder.compile()\n",
@@ -195,15 +205,14 @@
     "# Exercise 4.6: Compile the graph\n",
     "# Hint: Call .compile() on the graph builder.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "agent = build_agent(tools)\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9773e47",
+   "id": "1c2f089c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -215,8 +224,8 @@
     "# Exercise 4.7: Invoke the agent.\n",
     "# Hint: Initialize the conversation history with the query wrapped in a `HumanMessage` and use agent.invoke({\"messages\": messages})\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "messages = [HumanMessage(content=math_query)]\n",
+    "response = agent.invoke({\"messages\": messages})\n",
     "# </solution>\n",
     "\n",
     "# show the message history\n",
@@ -227,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14807886",
+   "id": "cd202509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,15 +247,19 @@
     "\n",
     "# Exercise 4.9: Use the above to create a search tool\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "@tool\n",
+    "def web_search(query: str, max_results: int = 5):\n",
+    "    \"\"\"Run a web search\"\"\"\n",
+    "    return str(DDGS().text(query, max_results=max_results))\n",
+    "\n",
+    "\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe76d92",
+   "id": "9032e5a1",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -255,8 +268,9 @@
     "search_query = \"What is Altana?\"\n",
     "# Exercise 4.9: Build and invoke the agent.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "agent = build_agent([web_search])\n",
+    "messages = [HumanMessage(content=search_query)]\n",
+    "response = agent.invoke({\"messages\": messages})\n",
     "# </solution>\n",
     "\n",
     "for m in response[\"messages\"]:\n",
@@ -265,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea71a48",
+   "id": "050b3c32",
    "metadata": {},
    "source": [
     "## Demo: Functional API\n",
@@ -277,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7800369a",
+   "id": "71a796e7",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -341,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5bc6d01",
+   "id": "c3c04dd0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -356,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7067bdd",
+   "id": "210677c8",
    "metadata": {},
    "source": [
     "# Exercise 4.10 (Bonus): Turn the agent into a chatbot.\n",
@@ -364,8 +378,18 @@
     "Hint: We need a checkpointer: https://docs.langchain.com/oss/python/langgraph/persistence#checkpoints\n",
     "\n",
     "<solution>\n",
-    "TODO: Implement this\n",
-    "pass\n",
+    "from langchain.checkpointers.memory import InMemorySaver\n",
+    "from langchain.agents import create_agent\n",
+    "\n",
+    "checkpointer = InMemorySaver()\n",
+    "agent = create_agent(tools, checkpointer=checkpointer)\n",
+    "\n",
+    "while True:\n",
+    "    user_input = input(\"User: \")\n",
+    "    response = agent.invoke({\n",
+    "        \"messages\": [HumanMessage(content=user_input)]}, \n",
+    "        config={\"configurable\": {\"thread_id\": \"1\"}})\n",
+    "    response[\"messages\"][-1].pretty_print()\n",
     "</solution>"
    ]
   }
