--- a/exercises/05_mcp.ipynb
+++ b/exercises/05_mcp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9736c4b0",
+   "id": "a82cef74",
    "metadata": {},
    "source": [
     "# Exercise 5: Intro to MCP\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f12c05",
+   "id": "f686a275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8048446",
+   "id": "3316bc0f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e6f397f",
+   "id": "e8cef2c0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d36dae",
+   "id": "326d94e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "044ed8f2",
+   "id": "8a8147a9",
    "metadata": {},
    "source": [
     "# Deployment\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7921236d",
+   "id": "ead8a1ec",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "782becf7",
+   "id": "de848ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63bc151a",
+   "id": "ebc9edb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4093582",
+   "id": "cacd1467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,8 +170,9 @@
     "        # ),\n",
     "        DatabricksMCPServer(\n",
     "            # <solution>\n",
-    "            # TODO: Implement this\n",
-    "            pass\n",
+    "            name=\"MyServer\",\n",
+    "            url=\"http://0.0.0.0:8000/sse\",\n",
+    "            workspace_client=custom_mcp_server_workspace_client,\n",
     "            # </solution>\n",
     "        ),\n",
     "    ]\n",
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f796e6d",
+   "id": "139a885f",
    "metadata": {},
    "source": [
     "\n",
@@ -190,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5bf4d4",
+   "id": "47a98225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a67664",
+   "id": "052e1f96",
    "metadata": {},
    "outputs": [],
    "source": [
