--- a/exercises/07_coding_agent.ipynb
+++ b/exercises/07_coding_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5deaa18e",
+   "id": "aabfa88d",
    "metadata": {},
    "source": [
     "# Exercise 7: Coding Agent - \"Plan in Code\"\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "140d2c9c",
+   "id": "472be00c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83a4e54",
+   "id": "33223732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cbacac4",
+   "id": "112cc592",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f417a28",
+   "id": "5e025349",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -83,14 +83,22 @@
     "# We want the agent to use this to process search results.\n",
     "# Hint: Use `llm.invoke` with a prompt.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "def synthesize(content: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Synthesizes/Summarizes the provided content using an LLM.\n",
+    "    \"\"\"\n",
+    "    print(f\"--> [Tool: Synthesize] Processing {len(content)} chars...\")\n",
+    "    prompt = f\"Summarize and synthesize the following information:\\n\\n{content}\"\n",
+    "    response = llm.invoke(prompt)\n",
+    "    return response.content\n",
+    "\n",
+    "\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "307a7c27",
+   "id": "35d51a3a",
    "metadata": {},
    "source": [
     "## 2. Setup Code Executor\n",
@@ -101,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1892d6",
+   "id": "7a092d42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +117,16 @@
     "# Inject `search` and `synthesize` into the environment.\n",
     "# Hint: Inject tools into `interpreter.state`.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "interpreter = LocalPythonExecutor(additional_authorized_imports=[\"datetime\", \"math\"])\n",
+    "# Inject our custom functions into the global scope of the interpreter\n",
+    "interpreter.state[\"search\"] = search\n",
+    "interpreter.state[\"synthesize\"] = synthesize\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d7d5ff1",
+   "id": "150be0c0",
    "metadata": {},
    "source": [
     "## 3. Define the Agent Logic\n",
@@ -131,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e0009fa",
+   "id": "a33a299a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +186,47 @@
     "    # 4. Handle errors and retry.\n",
     "    # Hint: Use a loop and feed back errors to the model.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    MAX_RETRIES = 3\n",
+    "    \n",
+    "    for attempt in range(MAX_RETRIES):\n",
+    "        # 1. Generate Code\n",
+    "        response = llm.invoke(messages)\n",
+    "        code = response.content\n",
+    "\n",
+    "        # 2. Clean Code\n",
+    "        code = clean_code(code)\n",
+    "\n",
+    "        print(f\"--- [Agent] Generated Code (Attempt {attempt+1}/{MAX_RETRIES}) ---\\n{code}\\n----------------------------\")\n",
+    "\n",
+    "        # 3. Execute\n",
+    "        try:\n",
+    "            # LocalPythonExecutor call returns the value of the last expression or print capture\n",
+    "            # smolagents uses `interpreter(...)`\n",
+    "            result = interpreter(code)\n",
+    "\n",
+    "            # We also capture stdout usually, but let's see what it returns\n",
+    "            # Combine return value and any captured prints\n",
+    "            captured_stdout = interpreter.state.get(\"_print_outputs\", \"\")\n",
+    "\n",
+    "            final_output = f\"Stdout:\\n{captured_stdout}\\n\\nReturn Value:\\n{result}\"\n",
+    "            return final_output\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            error_msg = f\"Execution Code Error on attempt {attempt+1}: {e}\"\n",
+    "            print(error_msg)\n",
+    "            \n",
+    "            # Feed the error back to the model\n",
+    "            messages.append(AIMessage(content=code))\n",
+    "            messages.append(HumanMessage(content=f\"The code failed to execute with the following error:\\n{e}\\n\\nPlease fix the code and try again.\"))\n",
+    "    \n",
+    "    return \"Failed to solve the task after max retries.\"\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e138f6",
+   "id": "a8c98c73",
    "metadata": {},
    "outputs": [],
    "source": [
