--- a/exercises/08_image_understanding.ipynb
+++ b/exercises/08_image_understanding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e83b6e17",
+   "id": "8bf7cf12",
    "metadata": {},
    "source": [
     "# Exercise 8: Image Understanding\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc25e73b",
+   "id": "f57710fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb800fc8",
+   "id": "6d8adb12",
    "metadata": {},
    "source": [
     "We'll be working with Databricks LLMs that support vision capabilities.\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e6f4e2e",
+   "id": "fe695088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e726212",
+   "id": "403b6a2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,17 @@
     "    try:\n",
     "        # Exercise 8.1.1: Request processing of the image\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        if image_input.startswith(\"http\"):\n",
+    "             base64_image = encode_image_from_url(image_input)\n",
+    "        else:\n",
+    "             base64_image = encode_image(image_input)\n",
+    "\n",
+    "        start_message_content.append(\n",
+    "            {\n",
+    "                \"type\": \"image_url\",\n",
+    "                \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"},\n",
+    "            }\n",
+    "        )\n",
     "        # </solution>\n",
     "    except Exception as e:\n",
     "        print(f\"Error loading image: {e}\")\n",
@@ -129,15 +138,17 @@
     "\n",
     "        # Exercise 8.1.3: Add user message and invoke model\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        chat_history.append(HumanMessage(content=user_input))\n",
+    "        response = model.invoke(chat_history)\n",
+    "        print(f\"AI: {response.content}\")\n",
+    "        chat_history.append(response)\n",
     "        # </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37de922a",
+   "id": "1e67d48d",
    "metadata": {},
    "outputs": [],
    "source": [
