--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ad52006",
+   "id": "89c6b809",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76cd0679",
+   "id": "cf4e4b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2df1e95",
+   "id": "50b3b83f",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4cf282",
+   "id": "726ea614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc699ee",
+   "id": "e2c3222d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9a21c8",
+   "id": "ced06db4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -101,9 +101,75 @@
     "# Exercise 1.1: Define the State classes as described above. Use either pydantic classes or `TypedDict`.\n",
     "# Hint: Use `operator.add` to append new outputs to the list instead of overwriting.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
-    "# </solution>\n",
+    "class SubTaskState(TypedDict):\n",
+    "    \"\"\"State for a single research worker agent.\"\"\"\n",
+    "\n",
+    "    topic: str\n",
+    "    result: str\n",
+    "\n",
+    "class ResearchState(TypedDict):\n",
+    "    \"\"\"Global state for the entire graph.\"\"\"\n",
+    "\n",
+    "    topic: str\n",
+    "    sub_topics: List[str]\n",
+    "    # Use operator.add to append new outputs to the list instead of overwriting\n",
+    "    research_outputs: Annotated[List[str], operator.add]\n",
+    "    final_report: str\n",
+    "\n",
+    "# </solution\n",
+    "\n",
+    "\n",
+    "class ResearchPlan(BaseModel):\n",
+    "    \"\"\"Structured output for the Chief Editor.\"\"\"\n",
+    "\n",
+    "    sub_topics: List[str] = Field(\n",
+    "        description=\"List of 3 distinct sub-topics to research in parallel\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9bb8c0",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "## Exercise 2: Define Nodes\n",
+    "\n",
+    "We need three nodes:\n",
+    "\n",
+    "1. **Chief Editor**: breaks the topic into sub-topics.\n",
+    "2. **Research Worker**: searches for information on a sub-topic.\n",
+    "3. **Writer**: compiles the report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b1b26d",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "def chief_editor_node(state: ResearchState):\n",
+    "    print(f\"--- [Chief Editor] Planning: {state['topic']} ---\")\n",
+    "\n",
+    "    # Exercise 2.1: Implement the Chief Editor\n",
+    "    # Use the LLM to generate a 'ResearchPlan' from the topic.\n",
+    "    # Hint: have a look at https://docs.langchain.com/oss/python/langchain/structured-output\n",
+    "    # <solution>\n",
+    "    planner = llm.with_structured_output(ResearchPlan)\n",
+    "    prompt = (\n",
+    "        f\"You are a Research Manager. Your goal is to break down the following research topic into 3 distinct, \"\n",
+    "        f\"targeted sub-topics that will convince a search engine to reveal specific facts, numbers, or data points.\\n\\n\"\n",
+    "        f\"Topic: {state['topic']}\\n\\n\"\n",
+    "        f\"Return 3 distinct sub-topics.\"\n",
+    "    )\n",
+    "    plan = planner.invoke(prompt)\n",
+    "\n",
+    "    return {\"sub_topics\": plan.sub_topics}\n",
+    "    # </solution>\n",
     "\n",
     "\n",
     "def research_worker_node(state: SubTaskState):\n",
@@ -113,8 +179,12 @@
     "    # Exercise 2.2: Implement the Research Worker\n",
     "    # Use 'search_tool' to find info and return it in 'research_outputs'.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    try:\n",
+    "        res = search_tool.invoke(topic)\n",
+    "    except Exception as e:\n",
+    "        res = f\"Search failed: {e}\"\n",
+    "\n",
+    "    return {\"research_outputs\": [f\"## Subtopic: {topic}\\n{res}\\n\"]}\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -124,14 +194,29 @@
     "    # Exercise 2.3: Implement the Writer\n",
     "    # Combine 'research_outputs' and ask the LLM to write a report.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    combined_content = \"\\n\\n\".join(state[\"research_outputs\"])\n",
+    "\n",
+    "    prompt = f\"\"\"\n",
+    "    You are a technical writer. Compile the following research notes into a comprehensive final report.\n",
+    "\n",
+    "    Topic: {state[\"topic\"]}\n",
+    "\n",
+    "    Research Notes:\n",
+    "    {combined_content}\n",
+    "\n",
+    "    Instructions:\n",
+    "    1. Synthesize the information into a clear, well-structured report.\n",
+    "    2. End with a \"Final Answer:\" section.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = llm.invoke(prompt)\n",
+    "    return {\"final_report\": response.content}\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "211f3bf0",
+   "id": "7a921050",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -149,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f5fb8b",
+   "id": "202e4fb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,22 +242,35 @@
     "    # Exercise 3.1: Define the mapping logic\n",
     "    # Return a list of `Send` objects, one for each sub-topic.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    return [\n",
+    "        Send(\"research_worker\", {\"topic\": sub_topic})\n",
+    "        for sub_topic in state[\"sub_topics\"]\n",
+    "    ]\n",
     "    # </solution>\n",
     "\n",
     "\n",
     "# Exercise 3.2: Build the Graph\n",
     "# Hint: You will need add_conditional_edges to send the sub-topics to the workers.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "workflow = StateGraph(ResearchState)\n",
+    "\n",
+    "workflow.add_node(\"chief_editor\", chief_editor_node)\n",
+    "workflow.add_node(\"research_worker\", research_worker_node)\n",
+    "workflow.add_node(\"writer\", writer_node)\n",
+    "\n",
+    "workflow.add_edge(START, \"chief_editor\")\n",
+    "workflow.add_conditional_edges(\"chief_editor\", map_subtopics, [\"research_worker\"])\n",
+    "workflow.add_edge(\"research_worker\", \"writer\")\n",
+    "workflow.add_edge(\"writer\", END)\n",
+    "\n",
+    "# Compile the graph\n",
+    "app = workflow.compile()\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d6f89754",
+   "id": "43725f1e",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -181,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143cedd5",
+   "id": "5bc15287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8834fc14",
+   "id": "b12c1a9e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -211,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda5b9d8",
+   "id": "17f0ce71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +325,21 @@
     "    # Exercise 4.1: Implement the Planner\n",
     "    # Use the LLM to generate a 'ResearchPlan' from the topic.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    planner = llm.with_structured_output(ResearchPlan)\n",
+    "\n",
+    "    # If there is a critique, we are regenerating\n",
+    "    if state.get(\"critique\"):\n",
+    "        print(f\"--- [Planner] Regenerating with critique: {state.get('critique')} ---\")\n",
+    "        prompt = f\"\"\"\n",
+    "        Original Topic: {state[\"topic\"]}\n",
+    "        Previous Plan: {state.get(\"sub_topics\")}\n",
+    "        User Critique: {state.get(\"critique\")}\n",
+    "\n",
+    "        Generate a new plan with 3 distinct sub-topics that addresses the critique.\n",
+    "        \"\"\"\n",
+    "    else:\n",
+    "        # Initial plan\n",
+    "        prompt = f\"Topic: {state['topic']}\\nReturn 3 distinct sub-topics.\"\n",
     "    # </solution>\n",
     "\n",
     "    plan = planner.invoke(prompt)\n",
@@ -238,8 +349,16 @@
     "def reviewer_node(state: ResearchStateHITL):\n",
     "    # Exercise 4.2: Add the interrupt\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    # Interrupt and wait for feedback\n",
+    "    # We allow the user to provide {\"approved\": True} or {\"critique\": \"...\"}\n",
+    "    feedback = interrupt(\n",
+    "        {\n",
+    "            \"sub_topics\": state[\"sub_topics\"],\n",
+    "            \"message\": \"Please review the research plan. Provide 'approved': True or 'critique': str.\",\n",
+    "        }\n",
+    "    )\n",
+    "    # The feedback from resume is expected to update the state\n",
+    "    return feedback\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -252,8 +371,10 @@
     "    if state.get(\"approved\"):\n",
     "        # Exercise 4.3: Send queries to research workers\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        return [\n",
+    "            Send(\"research_worker\", {\"topic\": sub_topic})\n",
+    "            for sub_topic in state[\"sub_topics\"]\n",
+    "        ]\n",
     "        # </solution>\n",
     "\n",
     "    # Loop back\n",
@@ -262,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4b5dbd",
+   "id": "25bcdbf7",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -273,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f2b13a",
+   "id": "069c82b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a4b9073",
+   "id": "eb8d3d43",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -324,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0575a2e8",
+   "id": "9924c68d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32eaa0a8",
+   "id": "c43e6785",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -413,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d13a5d",
+   "id": "609333bf",
    "metadata": {},
    "source": [
     "## Exercise 5 (Bonus): Benchmark Evaluation (GAIA)\n",
@@ -427,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dc86401",
+   "id": "b970a920",
    "metadata": {},
    "outputs": [],
    "source": [
