--- a/labs/lab_02_advanced.ipynb
+++ b/labs/lab_02_advanced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "822ebdd5",
+   "id": "0b310754",
    "metadata": {},
    "source": [
     "# Lab 2: Multi-Agent System (MAS) with Progressive Disclosure\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb998519",
+   "id": "30c932e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f43287e",
+   "id": "9adc467c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29c0d03",
+   "id": "85c1bd67",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba88589e",
+   "id": "07d957b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,7 @@
     "    # Exercise 2.1: Create a ReAct agent using `create_agent`\n",
     "    # Hint: pass the llm and the list of tools ([web_search])\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    return create_agent(llm, tools=[web_search])\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -119,14 +118,13 @@
     "    # Exercise 2.2: Create a coding agent\n",
     "    # Hint: Use `create_agent` with [exec_python] tool\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    return create_agent(llm, tools=[exec_python])\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9fcc7084",
+   "id": "ab27f871",
    "metadata": {},
    "source": [
     "## 2. Tool Registry & Discovery Mechanism\n",
@@ -137,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55e086cd",
+   "id": "431cadd6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -166,8 +164,8 @@
     "    # Exercise 2.3: Implement Tool Discovery\n",
     "    # Iterate over TOOL_REGISTRY and format the name and description for the LLM.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    for name, info in TOOL_REGISTRY.items():\n",
+    "        results.append(f\"- Tool: {name}\\n  Description: {info['description']}\")\n",
     "    # </solution>\n",
     "    return \"\\n\".join(results)\n",
     "\n",
@@ -188,14 +186,24 @@
     "    # 2. Invoke the agent with the task (wrapped in HumanMessage)\n",
     "    # 3. Return the content of the last message\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    # 1. Instantiate the agent (Just-In-Time)\n",
+    "    agent_app = entry[\"factory\"]()\n",
+    "\n",
+    "    # 2. Invoke the agent\n",
+    "    # The sub-agent expects a list of messages.\n",
+    "    try:\n",
+    "        result = agent_app.invoke({\"messages\": [HumanMessage(content=task)]})\n",
+    "        # 3. Extract final response\n",
+    "        last_msg = result[\"messages\"][-1]\n",
+    "        return last_msg.content\n",
+    "    except Exception as e:\n",
+    "        return f\"Error executing {tool_name}: {e}\"\n",
     "    # </solution>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ffc13494",
+   "id": "e9766c24",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -208,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1ccfa3a",
+   "id": "c0c9df44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +235,9 @@
     "    # Exercise 2.5: Create the Main Agent\n",
     "    # Give it access to `search_tools` and `call_tool`.\n",
     "    # <solution>\n",
-    "    # TODO: Implement this\n",
-    "    pass\n",
+    "    return create_agent(\n",
+    "        llm, tools=[search_tools, call_tool], system_prompt=system_prompt\n",
+    "    )\n",
     "    # </solution>\n",
     "\n",
     "\n",
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c112370",
+   "id": "85d04b34",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -250,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33c25dfa",
+   "id": "6521d5e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,8 +301,11 @@
     "        # Exercise 2.6: Invoke the Main Agent\n",
     "        # Invoke `main_agent` with the question and get the final response.\n",
     "        # <solution>\n",
-    "        # TODO: Implement this\n",
-    "        pass\n",
+    "        try:\n",
+    "            response = main_agent.invoke({\"messages\": [HumanMessage(content=question)]})\n",
+    "            predicted = response[\"messages\"][-1].content\n",
+    "        except Exception as e:\n",
+    "            predicted = f\"Error: {e}\"\n",
     "        # </solution>\n",
     "\n",
     "        print(f\"[Result]: {predicted[:100]}...\")\n",
@@ -317,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57469149",
+   "id": "0395e5c4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -337,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514083e5",
+   "id": "27784612",
    "metadata": {},
    "outputs": [],
    "source": [
