--- a/exercises/06_code_execution.ipynb
+++ b/exercises/06_code_execution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3cff3b37",
+   "id": "c44c794f",
    "metadata": {},
    "source": [
     "# Exercise 6: Code Execution vs Tool Calling\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aaa4db6",
+   "id": "badd2314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "355b5eda",
+   "id": "b26d0665",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -63,23 +63,34 @@
     "# This tool should take a code string, execute it using the `interpreter`, and return the output.\n",
     "# Make sure to handle `InterpreterError`.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "@tool\n",
+    "def exec_python(code: str):\n",
+    "    \"\"\"\n",
+    "    Evaluate python code. Can be used to perform calculations.\n",
+    "    The data to analyze is already defined as the variable 'df'.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        output = interpreter(\n",
+    "            code,\n",
+    "        )\n",
+    "        return f\"Stdout:\\n{str(interpreter.state['_print_outputs'])}\\nOutput: {output}\"\n",
+    "    except InterpreterError as e:\n",
+    "        return f\"There was an error: {e}\"\n",
     "# </solution>\n",
     "\n",
     "\n",
     "# Exercise 6.2: Create the agent\n",
     "# Use `create_agent` with the model and tools.\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "tools = [exec_python]\n",
+    "agent = create_agent(model=llm, tools=tools)\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae352f0",
+   "id": "45165d60",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -110,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdab543",
+   "id": "2315e757",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -130,15 +141,72 @@
     "from llm import embedding_dimensions, embeddings\n",
     "\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "# Initialize the store with the embedding model and dimensions\n",
+    "memory_store = InMemoryStore(\n",
+    "    index={\n",
+    "        \"embed\": embeddings,\n",
+    "        \"dims\": embedding_dimensions,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def create_memory(key: str, value: str, category: str = \"result\"):\n",
+    "    \"\"\"\n",
+    "    Stores a piece of information in long-term memory.\n",
+    "    Useful for saving results to avoid re-calculation, or errors to avoid repeating them.\n",
+    "\n",
+    "    Args:\n",
+    "        key: A short descriptive key or title for the memory.\n",
+    "        value: The content/details to remember.\n",
+    "        category: The category of memory. Must be either 'result' (for analysis findings) or 'error' (for bugs/issues).\n",
+    "    \"\"\"\n",
+    "    if category not in [\"result\", \"error\"]:\n",
+    "        return \"Error: Category must be either 'result' or 'error'.\"\n",
+    "\n",
+    "    # Namespace based on category\n",
+    "    namespace = (\"global\", category)\n",
+    "    memory_id = str(uuid.uuid4())\n",
+    "\n",
+    "    memory_store.put(\n",
+    "        namespace, memory_id, {\"key\": key, \"value\": value, \"category\": category}\n",
+    "    )\n",
+    "    return f\"Stored memory {memory_id} in category '{category}'\"\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def recall_memory(query: str, category: str = \"result\"):\n",
+    "    \"\"\"\n",
+    "    Retrieves information from long-term memory based on a query.\n",
+    "\n",
+    "    Args:\n",
+    "        query: Search term to find relevant memories using semantic search.\n",
+    "        category: The category to search in. use 'result' for past analysis, 'error' for coding patterns/restrictions.\n",
+    "    \"\"\"\n",
+    "    namespace = (\"global\", category)\n",
+    "    # Search for top 3 most relevant memories\n",
+    "    results = memory_store.search(namespace, query=query, limit=3)\n",
+    "\n",
+    "    if not results:\n",
+    "        return f\"No relevant memories found in category '{category}'.\"\n",
+    "\n",
+    "    formatted_results = []\n",
+    "    for item in results:\n",
+    "        content = item.value\n",
+    "        formatted_results.append(\n",
+    "            f\"[{content['category']}] {content['key']}: {content['value']}\"\n",
+    "        )\n",
+    "\n",
+    "    return \"Found memories:\\n\" + \"\\n\".join(formatted_results)\n",
+    "\n",
+    "\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03978ef9",
+   "id": "674cb856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,15 +215,15 @@
     "# Ask it to perform a calculation, store the result, and then in a follow-up (\"later\"), ask it to recall it.\n",
     "\n",
     "# <solution>\n",
-    "# TODO: Implement this\n",
-    "pass\n",
+    "memory_tools = [exec_python, create_memory, recall_memory]\n",
+    "memory_agent = create_agent(model=llm, tools=memory_tools)\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28b613d",
+   "id": "d14e32b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82eb981c",
+   "id": "5cf1a90a",
    "metadata": {},
    "outputs": [],
    "source": [
